--- a/qualicadastral/Cargo.toml
+++ b/qualicadastral/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 utils = { workspace = true }
 chrono = { workspace = true }
+log-panics = { workspace = true }
+simplelog = { workspace = true }
