Troca de dependencias

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,5 @@ members = ["esocial", "qualicadastral", "utils", "xml"]
 utils = { path = "utils" }
 xml = { path = "xml" }
 chrono = "0.4.31"
-log-panics = { version = "2", features = ["with-backtrace"] }
-simplelog = "^0.12.0"
-
+log = "0.4"
+structured-logger = "1.0.3"
